WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279217
text-emphasis-position default for vertical typographic modes is wrong
https://bugs.webkit.org/show_bug.cgi?id=279217
Summary
text-emphasis-position default for vertical typographic modes is wrong
fantasai
Reported
2024-09-05 12:48:55 PDT
https://www.w3.org/TR/css-text-decor-4/#text-emphasis-position-property
> If [ right | left ] is omitted, it defaults to right.
We currently interpret over/under as for sideways writing modes instead of defaulting to right. See testcase.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-05 13:14:32 PDT
<
rdar://problem/135366186
>
fantasai
Comment 2
2024-09-05 14:40:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33210
EWS
Comment 3
2024-09-06 11:15:13 PDT
Committed
283275@main
(29304d7c9119): <
https://commits.webkit.org/283275@main
> Reviewed commits have been landed. Closing PR #33210 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug