Omitted left | right value of text-emphasis-position defaults to right https://bugs.webkit.org/show_bug.cgi?id=279217 rdar://problem/135366186

Reviewed by Alan Baradlay.

If [ left | right ] is omitted from text-emphasis-position, it defaults to right.
https://www.w3.org/TR/css-text-decor/#text-emphasis-position-property

* LayoutTests/fast/repaint/text-emphasis-h.html:
* LayoutTests/fast/text/emphasis-vertical-over-right-expected.html:
* LayoutTests/fast/text/emphasis-vertical-over-right.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-text-decor/text-emphasis-position-default-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-text-decor/text-emphasis-position-default-001.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::InlineFormattingUtils::textEmphasisForInlineBox):
* Source/WebCore/rendering/RenderText.cpp:
(WebCore::RenderText::emphasisMarkExistsAndIsAbove):

Canonical link: https://commits.webkit.org/283275@main